<resources>
    <string name="app_name">Orgs</string>
    <string name="inserir">Inserir</string>
    <string name="nome">Nome</string>
    <string name="descricao">Descrição</string>
    <string name="valor">Valor</string>
    <string name="salvar">Salvar</string>
    <string name="data">Data</string>
    <string name="produto">Produto</string>
    <string name="url_carregando_imagem">URL carregando imagem</string>
    <string name="carregando">Carregando</string>
    <string name="botao_carregar">Botao carregar</string>
    <string name="titulo">Título</string>
    <string name="texto_titulo">O que é Lorem Ipsum?</string>
    <string name="descricao_artigo">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.</string>
    <string name="editar">Editar</string>
    <string name="deletar">Deletar</string>
</resources>