<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/formulario_dialog_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="40dp"
    android:layout_marginTop="100dp"
    android:layout_marginEnd="40dp"
    android:layout_marginBottom="260dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/formulario_dialog_botao_carregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/botao_carregar"
        android:drawableStart="@drawable/ic_android_refresh"
        android:text="@string/carregando"
        app:layout_constraintBottom_toBottomOf="@+id/formulario_dialog_imagemView"
        app:layout_constraintEnd_toEndOf="@id/formulario_dialog_imagemView"
        app:layout_constraintStart_toStartOf="@id/formulario_dialog_imagemView"
        app:layout_constraintTop_toBottomOf="@+id/formulario_dialog_imagemView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/formulario_dialog_imagemView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="@string/produto"
        android:scaleType="centerCrop"
        android:src="@drawable/imagem_padrao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_campo_nome"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/url_carregando_imagem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formulario_dialog_botao_carregar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_campo_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>